2001-08-17  Alex Graveley  <alex@ximian.com>

	* build/libsoup.def: Update for DAV methods.

2001-08-17  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-dav-server.[ch]: Initial WebDAV server
	support.

	* src/soup-core/soup-dav.[ch]: Beginnings of WebDAV client
	support.

	* configure.in: Add warning about updating
	src/soup-core/soup-private.h when version changes.

	* src/soup-core/soup-private.h: Declare SoupAuth here, so
	including is possible.

2001-08-12  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-ssl.c (soup_ssl_get_iochannel): Connect to
	HUP signal to avoid indefinate hangs. Remove idle waitpid
	handler. Thanks to Chris Toshok for finding this one.

2001-08-11  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-ssl-proxy.c (main): Fix typo causing
	O_NONBLOCK not to be set.

	* src/soup-core/soup-ssl.c (soup_ssl_get_iochannel): Ditto.

2001-08-10  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-private.h: Include sys/socket.h for sa in
	SoupAddress.

2001-08-08  Alex Graveley  <alex@ximian.com>

	* configure.in: Bump version to 0.4.3.

2001-08-08  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-transfer.c (soup_transfer_read_chunk):
	Handle entity headers after chunk body, closes bug #6846.

	* src/soup-core/soup-queue.c (soup_queue_read_done_cb): Fixup comments.

2001-08-06  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-private.h: Define VERSION to "Win/0.4.2" for
	Windows clients.

2001-08-06  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-transfer.c (soup_transfer_read_cb): Remove
	warning used for testing.
	(soup_transfer_write_cb): Ditto.

2001-08-06  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-transfer.c (soup_transfer_read_cb): Read
	speedup to read all available data before processing and returning
	to the mainloop.

	* src/soup-core/soup-message.h: Add defines for standard DAV methods.

2001-07-31  Alex Graveley  <alex@ximian.com>
