@@ -29,7 +29,7 @@
 #endif
 
 #ifdef SOUP_WIN32
-#define VERSION "Win/0.4.2"
+#define VERSION "Win/0.4.4"
 #include <windows.h>
 #include <winbase.h>
 #include <winuser.h>
